src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_call_in_pipe.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 21,
        "id": {
          "end": 3,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "end": 7,
              "raw": "1",
              "start": 6,
              "type": "Literal",
              "type": "Literal",
              "value": 1.0
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "type": "Identifier",
                    "name": "arg"
                  },
                  "arg": {
                    "end": 20,
                    "name": "x",
                    "start": 19,
                    "type": "Identifier",
                    "type": "Identifier"
                  }
                }
              ],
              "callee": {
                "end": 12,
                "name": "f",
                "start": 11,
                "type": "Identifier"
              },
              "end": 21,
              "start": 11,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "end": 21,
          "start": 6,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 21,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 21,
  "start": 0
}
