src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_call_multiline_with_comments.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 90,
        "id": {
          "end": 3,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "type": "Identifier",
                "name": "arg"
              },
              "arg": {
                "end": 29,
                "name": "x",
                "start": 28,
                "type": "Identifier",
                "type": "Identifier"
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "type": "Identifier",
                "name": "bar"
              },
              "arg": {
                "end": 76,
                "name": "x",
                "start": 75,
                "type": "Identifier",
                "type": "Identifier"
              }
            }
          ],
          "callee": {
            "end": 7,
            "name": "f",
            "start": 6,
            "type": "Identifier"
          },
          "end": 90,
          "non_code_meta": {
            "nonCodeNodes": {
              "1": [
                {
                  "end": 55,
                  "start": 44,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "foo = x,",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "start": 6,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": null
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 90,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 90,
  "start": 0
}
