src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_decl_all_labeled.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 25,
        "id": {
          "end": 6,
          "name": "foo",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "end": 23,
                  "raw": "1",
                  "start": 22,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                },
                "end": 23,
                "start": 15,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "end": 25,
            "start": 13
          },
          "end": 25,
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "end": 8,
                "name": "x",
                "start": 7,
                "type": "Identifier"
              }
            },
            {
              "type": "Parameter",
              "identifier": {
                "end": 11,
                "name": "y",
                "start": 10,
                "type": "Identifier"
              }
            }
          ],
          "start": 6,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 25,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 25,
  "start": 0
}
