src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_decl_first_unlabeled.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 26,
        "id": {
          "end": 6,
          "name": "foo",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "end": 24,
                  "raw": "1",
                  "start": 23,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                },
                "end": 24,
                "start": 16,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "end": 26,
            "start": 14
          },
          "end": 26,
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "end": 9,
                "name": "x",
                "start": 8,
                "type": "Identifier"
              },
              "labeled": false
            },
            {
              "type": "Parameter",
              "identifier": {
                "end": 12,
                "name": "y",
                "start": 11,
                "type": "Identifier"
              }
            }
          ],
          "start": 6,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 26,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 26,
  "start": 0
}
