src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_decl_with_default_and_type.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 35,
        "id": {
          "end": 6,
          "name": "foo",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "end": 33,
                  "raw": "1",
                  "start": 32,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 1.0,
                    "suffix": "None"
                  }
                },
                "end": 33,
                "start": 25,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "end": 35,
            "start": 23
          },
          "end": 35,
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "end": 8,
                "name": "x",
                "start": 7,
                "type": "Identifier"
              },
              "type_": {
                "None": null,
                "type": "Primitive",
                "type": "Number"
              },
              "default_value": {
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 2.0,
                  "suffix": "None"
                },
                "raw": "2"
              }
            }
          ],
          "start": 6,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 35,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 35,
  "start": 0
}
