src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_decl_with_default_no_type.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 27,
        "id": {
          "end": 6,
          "name": "foo",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "end": 25,
                  "raw": "1",
                  "start": 24,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                },
                "end": 25,
                "start": 17,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "end": 27,
            "start": 15
          },
          "end": 27,
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "end": 8,
                "name": "x",
                "start": 7,
                "type": "Identifier"
              },
              "default_value": {
                "type": "Literal",
                "type": "Literal",
                "value": 2.0,
                "raw": "2"
              }
            }
          ],
          "start": 6,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 27,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 27,
  "start": 0
}
