src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__l.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3936
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 26,
          "id": {
            "end": 9,
            "name": "obj",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "end": 26,
            "properties": [
              {
                "end": 18,
                "key": {
                  "end": 15,
                  "name": "a",
                  "start": 14,
                  "type": "Identifier"
                },
                "start": 14,
                "type": "ObjectProperty",
                "value": {
                  "end": 18,
                  "raw": "1",
                  "start": 17,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                }
              },
              {
                "end": 24,
                "key": {
                  "end": 21,
                  "name": "b",
                  "start": 20,
                  "type": "Identifier"
                },
                "start": 20,
                "type": "ObjectProperty",
                "value": {
                  "end": 24,
                  "raw": "2",
                  "start": 23,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 2.0
                }
              }
            ],
            "start": 12,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 26,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "declarations": [
        {
          "end": 63,
          "id": {
            "end": 43,
            "name": "height",
            "start": 37,
            "type": "Identifier"
          },
          "init": {
            "elements": [
              {
                "end": 59,
                "left": {
                  "computed": false,
                  "end": 55,
                  "object": {
                    "end": 50,
                    "name": "obj",
                    "start": 47,
                    "type": "Identifier",
                    "type": "Identifier"
                  },
                  "property": {
                    "end": 54,
                    "raw": "\"a\"",
                    "start": 51,
                    "type": "Literal",
                    "type": "Literal",
                    "value": "a"
                  },
                  "start": 47,
                  "type": "MemberExpression",
                  "type": "MemberExpression"
                },
                "operator": "-",
                "right": {
                  "end": 59,
                  "raw": "1",
                  "start": 58,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                },
                "start": 47,
                "type": "BinaryExpression",
                "type": "BinaryExpression"
              },
              {
                "end": 62,
                "raw": "0",
                "start": 61,
                "type": "Literal",
                "type": "Literal",
                "value": 0.0
              }
            ],
            "end": 63,
            "start": 46,
            "type": "ArrayExpression",
            "type": "ArrayExpression"
          },
          "start": 37,
          "type": "VariableDeclarator"
        }
      ],
      "end": 63,
      "kind": "const",
      "start": 31,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 63,
  "start": 0
}
