src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__n.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 18,
        "id": {
          "end": 6,
          "name": "height",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 18,
          "left": {
            "end": 10,
            "raw": "1",
            "start": 9,
            "type": "Literal",
            "type": "Literal",
            "value": 1.0
          },
          "operator": "-",
          "right": {
            "computed": false,
            "end": 18,
            "object": {
              "end": 16,
              "name": "obj",
              "start": 13,
              "type": "Identifier",
              "type": "Identifier"
            },
            "property": {
              "end": 18,
              "name": "a",
              "start": 17,
              "type": "Identifier",
              "type": "Identifier"
            },
            "start": 13,
            "type": "MemberExpression",
            "type": "MemberExpression"
          },
          "start": 9,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 18,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 18,
  "start": 0
}
